feat: dernier truc

--- a/mon_projet/templates/cv/index.html.twig
+++ b/mon_projet/templates/cv/index.html.twig
@@ -3,20 +3,21 @@
 {% block title %}CV{% endblock %}
 
 {% block body %}
-<h1 class="text-center">Technicien Réseaux & Télécommunications (Poste rêvé)</h1>
+<h1 class="text-center">Mon CV</h1>
 
 <hr>
 
 <h2>Formations</h2>
 <ul>
-    <li>2023 - 2025 : IUT Roanne - BUT RT</li>
-    <li>2020 - 2023 : Lycée Champagnat — Bac général</li>
+    <li>2025 - 2028 : IUT Roanne - BUT RT</li>
+    <li>2022 - 2025 : Lycée Champagnat — Bac général</li>
 </ul>
 
 <h2 class="mt-4">Expériences Professionnelles</h2>
 <ul>
     <li>Stage en entreprise - Maintenance réseau</li>
     <li>Projet Symfony — Portfolio</li>
+    <li>Stage en entreprise - emballage industriel</li>
 </ul>
 
 <h2 class="mt-4">Compétences</h2>
