feat: dernier truc

--- a/mon_projet/templates/cv/index.html.twig
+++ b/mon_projet/templates/cv/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}CV{% endblock %}
 
 {% block body %}
-<h1 class="text-center">Mon CV</h1>
+<h1 class="text-center">Technicien Réseaux & Télécommunications (Poste rêvé)</h1>
 
 <hr>
 
